# namedrop

./: Makefile  pyproject.toml
src/: main.py
